--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.mainContainer {
+    background-color: #F5F2EE !important;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +40,5 @@
     transform: rotate(360deg);
   }
 }
+
+
